fixed portrait picture spilling out of container at 400px

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -79,6 +79,12 @@ input, select, textarea {
 	border-radius: 50%;
 }
 
+@media screen and (max-width: 400px){
+	#portrait{
+		height: 250px;
+	}
+}
+
 
 #message {
 	
